tests/NormalTests/paczka1/fuzzy1/62381768.err
Error in line 6: BdUV S436 1,9
Error in line 1: qDSkDo5Pb A386 97,9
Error in line 8: qDSkDo5Pb A113 57,1
Error in line 12: vBhga9 A113 65,7
Error in line 7: BdUV A113 66,1
Error in line 16: BdUV S436 51,0
Error in line 21: lCDlQ5Q9d S436 18,9
Error in line 34: lCDlQ5Q9d S540 -1,0
Error in line 39: BdUV S436 42,29
